--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					rel="noopener noreferrer"
 				>
 					<div class="link-list-item medium">
-						Navigate about my coutry - Ethiopia
+						Navigate about my country - Ethiopia
 					</div>
 				</a>
 				<a
