--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			</div>
 			<div class="icon-list">
 				<a
-					href="https://github.com/Natnael22sds"
+					href="https://github.com/"
 					target="_blank"
 					rel="noopener noreferrer"
 				>
